start of new home page

--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
-        <title>Rebasoft Management Console</title>
+        <title>Clint Milner</title>
         <meta name="description" content="Rebasoft Management Console">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">    </head>
     <body>
@@ -11,7 +11,7 @@
             <!-- Main jumbotron for a primary marketing message or call to action -->
             <div class="jumbotron">
                 <div class="container">
-                    <h1 class="display-1">Title</h1>
+                    <h1 class="display-1">Clint Milner</h1>
                     <p id="container">react will kill this text anyway</p>
                 </div>
             </div>
@@ -21,7 +21,7 @@
             </div>
 
         <nav class="navbar fixed-bottom navbar-expand-sm navbar-dark bg-dark">
-            <a class="navbar-brand" href="#">Title</a>
+            <a class="navbar-brand" href="#">Clint Milner</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
